correct file path in standalone example

--- a/source/tutorial3/scripts/rnd_walk.pilot_tutorial.ipynb
+++ b/source/tutorial3/scripts/rnd_walk.pilot_tutorial.ipynb
@@ -272,7 +272,7 @@
      "output_type": "stream",
      "text": [
       "(debug) PySIMM: reading file\n",
-      "(debug) PySIMM: read_pdb: reading file '../../../../pysimm/models/monomers/topologies/cbma.str'\n",
+      "(debug) PySIMM: read_pdb: reading file '../../monomers/topologies/cbma.str'\n",
       "Total charge of the rep. unit is 0.0q\n"
      ]
     },
@@ -292,7 +292,7 @@
     }
    ],
    "source": [
-    "data_path = '../../../../pysimm/models/monomers/topologies/'\n",
+    "data_path = '../../monomers/topologies/'\n",
     "\n",
     "sst = system.read_pdb(data_path + 'cbma.pdb', str_file=data_path + 'cbma.str')\n",
     "sst.set_charge()\n",
