pre-publishing changes

--- a/text/references.bib
+++ b/text/references.bib
@@ -8,7 +8,6 @@ number = {1},
 pages = {1--19},
 publisher = {Academic Press},
 title = {{Fast Parallel Algorithms for Short-Range Molecular Dynamics}},
-url = {https://www.sciencedirect.com/science/article/pii/S002199918571039X?via{\%}3Dihub},
 volume = {117},
 year = {1995}
 }
@@ -70,12 +69,6 @@ year = {2008}
 }
 
 
-@misc{Swalis,
-author = {Swalis, Jason and Wiewiora, Rafal and Chodera, John},
-title = {{ParmEd documentation}},
-url = {https://parmed.github.io/ParmEd/html/index.html},
-urldate = {01/05/2021}
-}
 
 
 @article{zeopp,
@@ -90,7 +83,6 @@ pages = {134--141},
 pmid = {898},
 publisher = {Elsevier Inc.},
 title = {{Algorithms and Tools for High-Throughput Geometry-Based Analysis of Crystalline Porous Materials}},
-url = {http://dx.doi.org/10.1016/j.micromeso.2011.08.020},
 volume = {149},
 year = {2012}
 }
@@ -99,7 +91,6 @@ year = {2012}
 @article{pblazer,
 author = {Sarkisov, Lev and Harrison, Alex},
 doi = {10.1080/08927022.2011.592832},
-url = {https://doi.org/10.1080/08927022.2011.592832},
 isbn = {0892-7022},
 issn = {08927022},
 journal = {Mol. Simul.},
@@ -119,7 +110,7 @@ journal = {J. Mol. Graphics},
 number = {December 1995},
 pages = {33--38},
 title = {{VMD: Visual Molecular Dynamics}},
-url = {http://www.ks.uiuc.edu/Research/vmd},
+doi={10.1016/0263-7855(96)00018-5},
 volume = {7855},
 year = {1996}
 }
@@ -131,15 +122,16 @@ journal = {J. Cheminf.},
 number = {1},
 pages = {1--17},
 title = {{Avogadro: An Advanced Semantic Chemical Editor, Visualization, and Analysis Platform}},
-url = {http://avogadro.cc},
+doi={10.1186/1758-2946-4-17},
 volume = {4},
 year = {2012}
 }
 
 
 @misc{lmps:units,
-title = {{units command -- LAMMPS documentation}},
-url = {https://docs.lammps.org/units.html}
+  title = {{units command - LAMMPS documentation}},
+  howpublished = {\url{https://docs.lammps.org/units.html}},
+  note = {Accessed: 2021-10-12}
 }
 
 
@@ -151,8 +143,7 @@ volume = {35},
 number = {6},
 pages = {430-437},
 year = {2002},
-doi = {10.1021/ar010030m},
-URL = {https://doi.org/10.1021/ar010030m}
+doi = {10.1021/ar010030m}
 }
 
 
@@ -164,8 +155,7 @@ publisher = {Elsevier B.V.},
 title = {{Update 1.1 to “Pysimm: A Python Package for Simulation of Molecular Systems”}},
 volume = {15},
 year = {2021},
-doi = {10.1016/j.softx.2021.100749}, 
-url={https://doi.org/10.1016/j.softx.2021.100749}
+doi = {10.1016/j.softx.2021.100749}
 }
 
 
@@ -196,8 +186,7 @@ url={https://doi.org/10.1016/j.softx.2021.100749}
     publisher = {Taylor {\&} Francis},
     title = {{A Molecular Dynamics Study of Water-Soluble Polymers: Analysis of Force Fields From Atomistic Simulations}},
     volume = {7022},
-    year = {2019}, 
-    url={https://doi.org/10.1080/08927022.2018.1531401}
+    year = {2019}
 }
 
 @article{kubota-kubota,
@@ -209,7 +198,7 @@ url={https://doi.org/10.1016/j.softx.2021.100749}
   pages={15--20},
   year={1990},
   publisher={Nature Publishing Group}, 
-  url={https://doi.org/10.1295/polymj.22.15}
+  doi={10.1295/polymj.22.15}
 }
 
 @article{kubota-kubota2,
@@ -221,7 +210,7 @@ url={https://doi.org/10.1016/j.softx.2021.100749}
   pages={1051--1057},
   year={1990},
   publisher={Nature Publishing Group}, 
-  url={https://doi.org/10.1295/polymj.22.1051}
+  doi={10.1295/polymj.22.1051}
 }
 
 @article{tacx2000,
@@ -233,7 +222,7 @@ url={https://doi.org/10.1016/j.softx.2021.100749}
   pages={947--957},
   year={2000},
   publisher={Elsevier}, 
-  url={https://doi.org/10.1016/S0032-3861(99)00220-7}
+  doi={10.1016/S0032-3861(99)00220-7}
 }
 
 
@@ -246,7 +235,7 @@ url={https://doi.org/10.1016/j.softx.2021.100749}
   pages={2839--2851},
   year={2017},
   publisher={ACS Publications}, 
-  url={https://doi.org/10.1021/acs.jpcb.7b00326}
+  doi={10.1021/acs.jpcb.7b00326}
 }
 
 
@@ -258,8 +247,8 @@ url={https://doi.org/10.1016/j.softx.2021.100749}
   number={8},
   pages={4258--4263},
   year={2020},
-  publisher={Royal Society of Chemistry}, 
-  url={https://doi.org/10.1039/c9ra11035f}
+  publisher={Royal Society of Chemistry},
+  doi={10.1039/c9ra11035f}
 }
 
 
@@ -272,7 +261,7 @@ url={https://doi.org/10.1016/j.softx.2021.100749}
   pages={4129--4138},
   year={2019},
   publisher={ACS Publications}, 
-  url={https://doi.org/10.1021/acs.jpcb.9b01622}
+  doi={10.1021/acs.jpcb.9b01622}
 }
 
 @article{anstine2020effects,
@@ -283,8 +272,8 @@ url={https://doi.org/10.1016/j.softx.2021.100749}
   number={2},
   pages={025006},
   year={2020},
-  publisher={IOP Publishing}, 
-  url={https://doi.org/10.1088/1361-651X/ab615c}
+  publisher={IOP Publishing},
+  doi={10.1088/1361-651X/ab615c}
 }
 
 
@@ -297,8 +286,7 @@ url={https://doi.org/10.1016/j.softx.2021.100749}
     pages = {W563-W570},
     year = {2018},
     issn = {0305-1048},
-    doi = {10.1093/nar/gky294},
-    url = {https://doi.org/10.1093/nar/gky294}
+    doi = {10.1093/nar/gky294}
 }
 
 
@@ -310,8 +298,7 @@ volume = {64},
 number = {9},
 pages = {3230-3245},
 keywords = {protein-polymer conjugate, grafting-from, ATRP, RAFT, structure-function},
-doi = {https://doi.org/10.1002/aic.16338},
-url = {https://aiche.onlinelibrary.wiley.com/doi/abs/10.1002/aic.16338},
+doi = {10.1002/aic.16338},
 year = {2018}
 }
 
@@ -323,7 +310,6 @@ journal = {Curr. Opin. Chem. Eng.},
 pages = {44--50},
 publisher = {Elsevier Ltd},
 title = {{Molecular Simulation of Protein–Polymer Conjugates}},
-url = {https://doi.org/10.1016/j.coche.2019.02.006},
 volume = {23},
 year = {2019}
 }
@@ -337,8 +323,7 @@ volume = {123},
 number = {25},
 pages = {5196-5205},
 year = {2019},
-doi = {10.1021/acs.jpcb.8b12268},
-URL = {https://doi.org/10.1021/acs.jpcb.8b12268}
+doi = {10.1021/acs.jpcb.8b12268}
 }
 
 @article{aravinda_peg2,
@@ -348,7 +333,6 @@ journal = {J. Chem. Phys.},
 pages = {075101},
 publisher = {AIP Publishing, LLC},
 title = {{Atomistic Insight Towards the Impact of Polymer Architecture and Grafting Density on Structure-Dynamics of PEGylated Bovine Serum Albumin and Their Applications}},
-url = {https://doi.org/10.1063/5.0038306},
 volume = {154},
 year = {2021}
 }
@@ -363,8 +347,7 @@ year = {2021}
     pages = {e1963000},
     year  = {2021},
     publisher = {Taylor & Francis},
-    doi = {10.1080/00268976.2021.1963000},
-    URL = { https://doi.org/10.1080/00268976.2021.1963000}
+    doi = {10.1080/00268976.2021.1963000}
 }
 
 
@@ -376,6 +359,214 @@ year = {2021}
     number = {33},
     pages = {7997-8005},
     year = {2018},
-    doi = {10.1021/acs.jpcb.8b05359},
-    URL = {https://doi.org/10.1021/acs.jpcb.8b05359}
+    doi = {10.1021/acs.jpcb.8b05359}
+}
+
+
+@article{nglview,
+    author = {Nguyen, Hai and Case, David A and Rose, Alexander S},
+    title = "{NGLview–interactive molecular graphics for Jupyter notebooks}",
+    journal = {Bioinformatics},
+    volume = {34},
+    number = {7},
+    pages = {1241-1242},
+    year = {2017},
+    month = {12},
+    issn = {1367-4803},
+    doi = {10.1093/bioinformatics/btx789}
+}
+
+
+@article{pysimm_orig,
+author = {Fortunato, Michael E. and Colina, Coray M.},
+doi = {10.1016/j.softx.2016.12.002},
+journal = {SoftwareX},
+keywords = {Amorphous polymers,Molecular simulation,Python},
+pages = {7--12},
+publisher = {Elsevier B.V.},
+title = {{pysimm: A python package for simulation of molecular systems}},
+volume = {6},
+year = {2017}
+}
+
+
+@book{young1991_pmers,
+  title={Introduction to Polymers, Second Edition},
+  author={Young, R.J. and Lovell, P.A.},
+  isbn={9780748757404},
+  lccn={58063704},
+  series={Progress report},
+  url={https://books.google.com/books?id=-IhIzD4NQXAC},
+  year={1991},
+  publisher={Taylor \& Francis}
+}
+
+
+@misc{sun_oop_summary,
+  title = {{Lesson: Object-Oriented Programming Concepts}},
+  howpublished = {\url{https://docs.oracle.com/javase/tutorial/java/concepts/index.html}},
+  note = {Accessed: 2022-05-24}
+}
+
+
+@unpublished{lammps_at_osti,
+title={LAMMPS Overview: Design Features Future},
+author = {Plimpton, Steven J.},
+year = {2016},
+note= {{Symposium on Molecular Dynamics of Materials from Assembly to Fracture}},
+URL= {https://www.osti.gov/biblio/1375563},
+}
+
+
+@misc{amber_2016,
+address = {San Francisco},
+author = {Case, D A and Betz, R M and Botello-Smith, W and Cerutti, D S and Cheatham, T E and Darden, T A and Duke, R E and Giese, T J and Gohlke, H and Goetz, A W and Homeyer, N and Izadi, S and Janowski, P and Kaus, J and Kovalenko, A and Lee, T S and LeGrand, S and Li, P and Lin, C and Luchko, T and Luo, R and Madej, B and Mermelstein, D and Merz, K M and Monard, G and Nguyen, H and Nguyen, H T and Omelyan, I and Onufriev, A and Roe, D R and Roitberg, A and Sagui, C and Simmerling, C L and Swails, J and Walker, R C and Wang, J and Wolf, R M and Wu, X and Xiao, L and York, D M and Kollman, P A},
+title = {{AMBER 2016}}
+}
+
+
+@article{vmslghe2010,
+author = {Vanommeslaeghe, K and Hatcher, E and Acharya, C and Kundu, S and Zhong, S and Shim, J and Darian, E and Guvench, O and Lopes, P and Vorobyov, I and Mackerell, A. D.},
+doi = {10.1002/jcc.21367.CHARMM},
+journal = {Journal of Computational Chemistry},
+number = {4},
+pages = {671-690},
+title = {{CHARMM General Force Field (CGenFF): A force field for drug-like molecules compatible with the CHARMM all-atom additive biological force fields}},
+volume = {31},
+year = {2010}
+}
+
+@article{vmslghe2012_1,
+author = {Vanommeslaeghe, K. and MacKerell, A. D.},
+title = {Automation of the CHARMM General Force Field (CGenFF) I: Bond Perception and Atom Typing},
+journal = {Journal of Chemical Information and Modeling},
+volume = {52},
+number = {12},
+pages = {3144-3154},
+year = {2012},
+doi = {10.1021/ci300363c}
+}
+
+
+@article{vmslghe2012_2,
+author = {Vanommeslaeghe, K and Raman, E Prabhu and Mackerell, A D},
+doi = {10.1021/ci3003649},
+journal = {Journal of Chemical Information and Modeling},
+number = {12},
+pages = {3155-3168},
+title = {Automation of the CHARMM General Force Field (CGenFF) II: Assignment of Bonded Parameters and Partial Atomic Charges},
+volume = {52},
+year = {2012}
+}
+
+
+@article{gaff,
+author = {Wang, J and Wolf, R and Caldwell, J and Kollman, P and Case, D},
+journal = {J. Comput. Chem.},
+pages = {1157},
+title = {{Development and Testing of a General AMBER Force Field}},
+volume = {34},
+year = {2004},
+doi={10.1002/jcc.20035}
+}
+
+
+@article{pysimm_upd1,
+author = {Demidov, Alexander G. and Fortunato, Michael E. and Colina, Coray M.},
+doi = {10.1016/j.softx.2018.02.006},
+issn = {23527110},
+journal = {SoftwareX},
+pages = {70-73},
+publisher = {Elsevier B.V.},
+title = {{Update 0.2 to “pysimm: A python package for simulation of molecular systems”}},
+volume = {7},
+year = {2018}
+}
+
+
+@article{pmatic,
+author = {Abbott, Lauren J. and Hart, Kyle E. and Colina, Coray M.},
+doi = {10.1007/s00214-013-1334-z},
+isbn = {1432-881X},
+issn = {1432881X},
+journal = {Theoretical Chemistry Accounts},
+keywords = {Equilibration,Glassy polymers,Molecular simulations,Simulated polymerization},
+number = {3},
+pages = {1--19},
+title = {{Polymatic: A generalized simulated polymerization algorithm for amorphous polymers}},
+volume = {132},
+year = {2013}
+}
+
+@article{cbmc_orig,
+author = {Siepmann, J. Ilja and Frenkel, Daan},
+journal = {Molecular Physics},
+number = {1},
+pages = {59--70},
+title = {{Conflgurational bias Monte Carlo: a new sampling scheme for flexible chains}},
+volume = {75},
+year = {1992},
+doi={10.1080/00268979200100061}
+}
+
+
+@article{cbmc_theodoru1,
+  title={Variable connectivity method for the atomistic Monte Carlo simulation of polydisperse polymer melts},
+  author={Pant, PV Krishna and Theodorou, Doros N},
+  journal={Macromolecules},
+  volume={28},
+  number={21},
+  pages={7224--7234},
+  year={1995},
+  publisher={ACS Publications},
+  doi={10.1021/ma00125a027}
+}
+
+
+@article{moltemplate,
+title = {Moltemplate: A Tool for Coarse-Grained Modeling of Complex Biological Matter and Soft Condensed Matter Physics},
+journal = {Journal of Molecular Biology},
+volume = {433},
+number = {11},
+pages = {166841},
+year = {2021},
+note = {Computation Resources for Molecular Biology},
+issn = {0022-2836},
+doi = {10.1016/j.jmb.2021.166841},
+author = {Andrew I. Jewett and David Stelter and Jason Lambert and Shyam M. Saladi and Otello M. Roscioni and Matteo Ricci and Ludovic Autin and Martina Maritan and Saeed M. Bashusqeh and Tom Keyes and Remus T. Dame and Joan-Emma Shea and Grant J. Jensen and David S. Goodsell},
+keywords = {coarse-grained simulation, molecular modeling, LAMMPS, molecular dynamics}
+}
+
+@misc{topotools,
+    year = {2017},
+    author = {Axel Kohlmeyer},
+    title = {{TopoTools}}, 
+    howpublished = {\url{https://sites.google.com/site/akohlmey/software/topotools}}, 
+    note = {Accessed: 2022-06-20}
+}
+
+
+@article{charmm_gui_poly,
+author = {Choi, Yeol Kyo and Park, Sang-Jun and Park, Soohyung and Kim, Seonghoon and Kern, Nathan R. and Lee, Jumin and Im, Wonpil},
+title = {CHARMM-GUI Polymer Builder for Modeling and Simulation of Synthetic Polymers},
+journal = {Journal of Chemical Theory and Computation},
+volume = {17},
+number = {4},
+pages = {2431-2443},
+year = {2021},
+doi = {10.1021/acs.jctc.1c00169}
+}
+
+
+@misc{venv_py,
+    title = {{venv — Creation of virtual environments}},
+    howpublished = {\url{https://docs.python.org/3/library/venv.html}},
+    note = {Accessed: 2022-06-20}
+}
+
+
+@misc{conda,
+    title = {{Conda release. Home}},
+    howpublished = {\url{https://docs.conda.io/projects/conda/en/latest/index.html}},
+    note = {Accessed: 2022-06-20}
 }
